preventing wrapping on ul.nested

--- a/styles/global.css
+++ b/styles/global.css
@@ -131,13 +131,13 @@ ul.nested li { margin:0; padding:0; line-height:16px; }
 ul.nested li div.row { cursor:move; margin:-1px 0 0 0; padding:4px 0 4px; background:#fff; border:1px solid #eee; overflow: auto; }
 ul.nested li div.column { float: left; }
 ul.nested li div.published { width:24px; }
-ul.nested li div.level_1 div.link { width: 485px; }
-ul.nested li div.level_2 div.link { width: 463px; }
-ul.nested li div.level_3 div.link { width: 441px; }
-ul.nested li div.level_4 div.link { width: 419px; }
-ul.nested li div.level_5 div.link { width: 397px; }
-ul.nested li div.level_6 div.link { width: 375px; }
-ul.nested li div.updated { width: 120px; text-align: right; margin-right: 5px; }
+ul.nested li div.level_1 div.link { width: 465px; }
+ul.nested li div.level_2 div.link { width: 443px; }
+ul.nested li div.level_3 div.link { width: 421px; }
+ul.nested li div.level_4 div.link { width: 399px; }
+ul.nested li div.level_5 div.link { width: 377px; }
+ul.nested li div.level_6 div.link { width: 355px; }
+ul.nested li div.updated { width: 140px; text-align: right; margin-right: 5px; }
 ul.nested li div.delete { width: 10px; }
 
 ul.nested li ul { list-style-type:none; padding:0; margin-left:10px; background:url(/login/images/vline.png) repeat-y; }
